react-trainings/.kubernetes/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: react-trainings
spec:
  selector:
    app: react-trainings
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
