react-trainings/.kubernetes/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-trainings
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: react-trainings.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: react-trainings
                port:
                  number: 8080
